Track proposal reference PDFs

--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,7 @@ results/
 # Large binaries (optional: keep PDFs tracked only if you want)
 # *.pdf
 
-# Proposal reference PDFs (often confidential; keep in repo folder but avoid committing by default)
-docs/03_proposal/references/proposals/*.pdf
+# Proposal reference artifacts (keep derived extracts out of git by default)
 docs/03_proposal/references/proposals/parsed/
 docs/03_proposal/references/proposals/ocr_previews/
 
