--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
+# System
+.DS_Store
+Thumbs.db
 
+# Python
+__pycache__/
+*.py[cod]
+*.so
+
+# Chrome User Data (Playwright/Selenium)
+scripts/chrome_user_data*
+scripts/chrome_user_data/
+scripts/chrome_user_data_clean/
+scripts/chrome_user_data_clean_2/
+
+# Debug/Temp
+dashboard_debug.png
+dashboard_dump.html
+*.log
